--- a/HW2-200538013/SpMV/Makefile
+++ b/HW2-200538013/SpMV/Makefile
@@ -1,8 +1,8 @@
-# CC=gcc
-CC=mpicc
+CC=gcc
+# CC=mpicc
 #FLAG=-g -Wall
-FLAG=-O3 -lm -std=c99 -I./include/ -Wno-unused-result -Wno-write-strings
-# FLAG=-O3 -std=c99 -I./include/ -I/usr/local/opt/libomp/include -Wno-unused-result -Wno-write-strings -fopenmp
+# FLAG=-O3 -lm -std=c99 -I./include/ -Wno-unused-result -Wno-write-strings
+FLAG=-O3 -std=c99 -I./include/ -I/usr/local/opt/libomp/include -Wno-unused-result -Wno-write-strings -fopenmp
 LDFLAG=-O3
 
 OBJS=spmv.o mmio.o 
@@ -11,8 +11,8 @@ OBJS=spmv.o mmio.o
 	${CC} -o $@ -c ${FLAG} $<
 
 spmv: ${OBJS}
-	${CC} -lm ${LDFLAG} -o $@ $^
-# ${CC} -lm ${LDFLAG} -fopenmp -o $@ $^
+# ${CC} -lm ${LDFLAG} -o $@ $^
+	${CC} -lm ${LDFLAG} -fopenmp -o $@ $^
 
 .PHONY:clean
 clean: 
